--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
 
   qr_mobile_vision: ^0.3.1
+  qr_flutter: ^3.1.0
+
   logger:
   fluttertoast: ^4.0.1
   http: ^0.12.1
